[gd_scene load_steps=8 format=3 uid="uid://d02iauad6u6xl"]

[ext_resource type="Script" path="res://basic_enemy.gd" id="1_06h5o"]
[ext_resource type="PackedScene" uid="uid://cookmjlywv4nt" path="res://enemy_bullet.tscn" id="2_67r0d"]
[ext_resource type="Texture2D" uid="uid://dvvp652mnmnbg" path="res://kenney_space-shooter-redux/PNG/Enemies/enemyBlack1.png" id="3_yscfo"]
[ext_resource type="Script" path="res://HealthDisplay.gd" id="4_v54e4"]
[ext_resource type="AudioStream" uid="uid://boioomouwi6ys" path="res://sound/shield.ogg" id="5_pcksr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mldqg"]
size = Vector2(44, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0bivm"]
size = Vector2(69, 42)

[node name="Basic Enemy" type="CharacterBody2D" groups=["Enemies"]]
collision_mask = 2
script = ExtResource("1_06h5o")
Bullet = ExtResource("2_67r0d")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_yscfo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mldqg")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, 5)
rotation = 3.14159

[node name="Change Direction at Wall" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Change Direction at Wall"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_0bivm")

[node name="HealthDisplay" type="Node2D" parent="."]
position = Vector2(0, 8)
scale = Vector2(0.33, 0.33)
script = ExtResource("4_v54e4")

[node name="HealthBar" type="TextureProgressBar" parent="HealthDisplay"]
offset_left = -100.0
offset_top = -106.061
offset_right = 100.0
offset_bottom = -77.0606

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
volume_db = -6.0

[node name="ShieldSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_pcksr")
volume_db = -6.0

[connection signal="body_entered" from="Change Direction at Wall" to="." method="_on_change_direction_at_wall_body_entered"]
